# university-db

./: .clang-format  .gitignore  CMakeLists.txt  Gender.cpp  Gender.hpp  Menu.cpp  Menu.hpp  Pesel.cpp  Pesel.hpp  README.md  Student.cpp  Student.hpp  StudentBase.cpp  StudentBase.hpp  main.cpp  students_class.cpp  students_class.hpp  test.cpp  type_sex.hpp
.github/workflows/: main.yml
src/: Employee.cpp  Employee.hpp  Gender.cpp  Person.cpp  Person.hpp  Pesel.cpp  Pesel.hpp  Student.cpp  Student.hpp  UniversityBase.cpp  UniversityBase.hpp  main.cpp
tests/: test-employee.cpp  test-gender.cpp  test-person.cpp  test-pesel.cpp  test-student.cpp  test-universitybase.cpp
